objects/hmisProgramRelatedCoC__c.object
<CustomObject>
    <description>What Continuum of Care (regions where care is coordinated) is this Program / Project related too?</description>
    <fields>
        <fullName>API_Address1__c</fullName>
        <formula>IF(ISBLANK( Address__r.Street),&quot;&quot;,( Address__r.Street))</formula>
        <label>API_Address1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Address2__c</fullName>
        <formula>IF(ISBLANK( Address__r.Address_2__c),&quot;&quot;,( Address__r.Address_2__c))</formula>
        <label>API_Address2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_City__c</fullName>
        <formula>IF(ISBLANK(  Address__r.City ),&quot;&quot;,( Address__r.City))</formula>
        <label>API_City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CoCCode__c</fullName>
        <formula>TEXT( hmisCoCCode__c )</formula>
        <label>API_CoCCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK( DateDeleted__c )),

TEXT(YEAR(DATEVALUE(  DateDeleted__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE( DateDeleted__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DateDeleted__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( DateDeleted__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_GeographyType__c</fullName>
        <formula>TRIM(LEFT(TEXT(hmisGeographyType__c),FIND(&quot;:&quot;, TEXT(hmisGeographyType__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_GeographyType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_State__c</fullName>
        <formula>IF(ISBLANK( Address__r.State ),&quot;&quot;,( Address__r.State ))</formula>
        <label>API_State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Program Related CoCs</relationshipLabel>
        <relationshipName>Program_Related_CoCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <label>DateDeleted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <label>Geocode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMISGeocode__c</fullName>
        <formula>&quot;&apos;&apos;&quot;&amp;Geocode__c&amp;&quot;&apos;&apos;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HMISGeocode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMIS_Zip__c</fullName>
        <description>Used purely to report to HMIS and includes quotes before and after the zip code.</description>
        <formula>IF(ISBLANK( Address__r.PostalCode ),&quot;&quot;,(&quot;&apos;&apos;&quot;&amp;( Address__r.PostalCode)&amp;&quot;&apos;&apos;&quot;))</formula>
        <label>HMISZip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hmisCoCCode__c</fullName>
        <description>The Continuum of Care that this project is associated too</description>
        <inlineHelpText>The Continuum of Care that this project is associated too</inlineHelpText>
        <label>CoC Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisContinuumOfCareCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisExportId__c</fullName>
        <formula>$Setup.hmisExport__c.hmisExportID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExportId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hmisGeographyType__c</fullName>
        <description>HUD Geography Type</description>
        <inlineHelpText>HUD Geography Type</inlineHelpText>
        <label>Geography Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisGeographyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisProjectCoCId__c</fullName>
        <label>Project CoC Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hmisProjectID__c</fullName>
        <description>Project Id</description>
        <formula>hmisProject__r.Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Id</inlineHelpText>
        <label>ProjectID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hmisProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program (aka project) that is related to a Continuum of Care</description>
        <inlineHelpText>The program (aka project) that is related to a Continuum of Care</inlineHelpText>
        <label>Program / Project</label>
        <referenceTo>Program</referenceTo>
        <relationshipLabel>Program Related CoCs</relationshipLabel>
        <relationshipName>Program_Related_CoCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Related CoC</label>
    <nameField>
        <displayFormat>P_CoC-{00000000}</displayFormat>
        <label>Program Related CoC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Related CoCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>